# tmux-agent

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  justfile
docs/: architecture.md  index.md  lessons.md  spec.md  tasks.md
docs/changes/build-tooling-versioning/: overview.md  tasks.md
docs/changes/phase-1-core-and-switching/: fzf-switching.md  overview.md  tasks.md  tmux-abstraction.md
docs/changes/phase-2-communication/: overview.md
docs/changes/phase-3-attention/: overview.md
docs/changes/phase-4-alerts/: overview.md
src/: agent.rs  cli.rs  envelope.rs  error.rs  lib.rs  main.rs  setup.rs  version.rs  versioning.rs  window_status.rs
src/switch/: agent.rs  base.rs  mod.rs  pane.rs  session.rs  window.rs  worktree.rs
src/tmux/: capture.rs  client.rs  keys.rs  mod.rs  pane.rs  session.rs
tests/: agent_detection_test.rs
tests/fixtures/: ap_2_0.txt  ap_3_0.txt  work_2_0.txt  work_2_1.txt  work_2_2.txt
